--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,3 @@
-
 {
   "hosting": {
     "public": "dist",
@@ -15,6 +14,13 @@
     ]
   },
   "storage": {
-    "rules": "storage.rules"
+    "rules": "storage.rules",
+    "cors": [
+      {
+        "origin": ["https://greenlens-ai.vercel.app"],
+        "method": ["GET", "POST", "PUT", "DELETE"],
+        "maxAgeSeconds": 3600
+      }
+    ]
   }
 }
